--- a/ToDo/public/index.html
+++ b/ToDo/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vue App</title>
+    <script src="https://kit.fontawesome.com/0609b1b82e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
